using UnityEngine;

internal class AnimationStrings : MonoBehaviour
{
    // Player and enemy
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string isDead = "isDead";
    internal static string jump = "jump";
    internal static string fall = "fall";
    internal static string attack = "attack";
    internal static string shoot = "shoot";
    internal static string hit = "hit";
    internal static string throwSword = "throwSword";
    internal static string isAttacking = "isAttacking";
    internal static string anticipation = "anticipation";

    // Chest
    internal static string open = "open";

    // UI
    internal static string openMainMenu = "mainMenu";
    internal static string openLevelMenu = "levelMenu";

    // Sword
    internal static string isStuck = "isStuck";
}
